# githook

./: .dockerignore  .gitignore  .goreleaser.yml  AGENTS.md  Dockerfile  Makefile  README.md  app.docker.yaml  app.yaml  buf.gen.yaml  config.yaml  docker-compose.yaml  fly.toml  go.mod  go.sum  index.yaml  install.sh  main.go  test.yaml
cmd/: auth.go  config_loader.go  connect_client.go  drivers.go  init.go  installations.go  namespaces.go  provider_instances.go  root.go  rules.go  serve.go  tenant.go  util.go  util_test.go
docs/: auth.md  cli.md  drivers.md  events.md  getting-started-bitbucket.md  getting-started-github.md  getting-started-gitlab.md  oauth-callbacks.md  observability.md  quickstart-secure.md  rules.md  scm-auth.md  sdk-dsl.md  sdk_clients.md  storage.md  webhooks.md
examples/: Makefile  README.md
idl/: buf.mod  buf.yaml
internal/: config.go  config_test.go  flatten.go  flatten_test.go  publisher.go  publisher_test.go  rules.go  (+1 more)
sdk/python/worker/: README.md  pyproject.toml  setup.cfg  setup.py
sdk/python/worker/buf/validate/: validate_pb2.py
sdk/python/worker/cloud/: __init__.py
sdk/python/worker/cloud/v1/: __init__.py  githooks_connect.py  githooks_pb2.py
sdk/python/worker/relaymesh/: api.py  oauth2.py
sdk/python/worker/relaymesh_githook/: __init__.py  api.py  client.py  listener.py  metadata.py  oauth2.py  retry.py  scm_client_provider.py  scm_clients.py  subscriber.py  types.py  worker.py
sdk/python/worker/relaymesh_githook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/worker/tests/: test_worker.py
(+355 files in other folders)
