[metadata]
name = relaymesh-githook
version = 0.0.0
description = Relaymesh Githook worker SDK
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    protobuf>=4.21.0

[options.extras_require]
amqp = relaybus-amqp
kafka = relaybus-kafka
nats = relaybus-nats
all =
    relaybus-amqp
    relaybus-kafka
    relaybus-nats

[options.packages.find]
where = .
include =
    relaymesh_githook*
    cloud*
